<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg"
    android:gravity="center"
    tools:context=".auth.SignUpActivity">

    <LinearLayout
        android:layout_width="@dimen/_290sdp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/_10sdp"
        android:background="@drawable/bgfront"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="@dimen/_10sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/sign_up"
            android:textStyle="bold"
            android:textFontWeight="800"
            android:textColor="#0EEAEB"
            android:textSize="@dimen/_40sdp" />


        <EditText
            android:id="@+id/gname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:ems="10"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/your_game_name"
            android:inputType="textPersonName"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="#CAE2FC" />


        <EditText
            android:id="@+id/emailS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:ems="10"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/your_email_address"
            android:inputType="textEmailAddress"
            android:text=""
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="#CAE2FC" />


        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="#CAE2FC" />

        <EditText
            android:id="@+id/pass2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/re_typepassword"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            android:textColorHint="#CAE2FC" />

        <Button
            android:id="@+id/signBtn"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/register_me"
            android:textSize="@dimen/_10sdp"
            android:paddingHorizontal="@dimen/_20sdp"
            android:paddingVertical="@dimen/_5sdp"
            app:backgroundTint="#0E53EB" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/josefin_sans_bold"
            android:onClick="onClick"
            android:text="@string/already_have_account"
            android:textSize="@dimen/_12sdp"
            android:textColor="#0EEB7A" />
    </LinearLayout>

</LinearLayout>