<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/themeColor"
    tools:context=".home.PlayersActivity">

    <ImageView
        android:id="@+id/img"
        android:layout_width="391dp"
        android:layout_height="268dp"
        android:layout_marginTop="52dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/homesl" />

    <LinearLayout
        android:layout_width="332dp"
        android:layout_height="256dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img">

        <EditText
            android:id="@+id/name1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/username_background"
            android:drawableBottom="@color/purple_500"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/first_player"
            android:textColorHint="#CAE2FC"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/name2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:drawableStart="@drawable/username_background"
            android:drawableBottom="@color/purple_500"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/josefin_sans_bold"
            android:hint="@string/second_player"
            android:textColorHint="#CAE2FC"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btnGuest"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:fontFamily="@font/josefin_sans_bold"
            android:text="@string/play_game"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textStyle="bold"
            app:backgroundTint="@color/teal_200"
            app:cornerRadius="5dp" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>